--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  app:
+  app: &app
     build:
       context: .
       dockerfile: dockerfiles/app.Dockerfile
@@ -18,6 +18,11 @@ services:
         condition: service_completed_successfully
       database:
         condition: service_healthy
+  test:
+    <<: *app
+    profiles:
+      - test
+    entrypoint: ["uv", "run", "pytest", "/src/tests","--it"]
 
   database_startup:
     image: db_startup
