--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,9 @@ POSTGRES_PORT=5432
 
 # Application DBs
 LANGFUSE_DB_PASSWORD=langfuse
-APP_DB_PASSWORD=app
+APP_DB=webapp
+APP_DB_USER=webapp
+APP_DB_PASSWORD=webapp
 
 # Django
 DJANGO_SECRET_KEY=some-very-secret-secret
