--- a/nginx/development.conf
+++ b/nginx/development.conf
@@ -6,6 +6,13 @@ http {
         listen [::]:80;
         server_name app.localhost;
         set $app_target "http://app:8000";
+
+        location /static/ {
+            alias /usr/share/nginx/static/;
+            expires 30d;
+            add_header Cache-Control "public, no-transform";
+        }
+
         location / {
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $remote_addr;
