--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "app"
+name = "opensailor.org"
 version = "0.1.0"
-description = "Add your description here"
+description = "Open and free sailing database"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
