log in via github

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,9 @@ APP_DB_PASSWORD=webapp
 
 # Django
 DJANGO_SECRET_KEY=some-very-secret-secret
+
+# Social
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
