--- a/nginx/development.conf
+++ b/nginx/development.conf
@@ -7,18 +7,25 @@ http {
         server_name app.localhost;
         set $app_target "http://app:8000";
 
-        location /static/ {
-            alias /usr/share/nginx/static/;
-            expires 30d;
-            add_header Cache-Control "public, no-transform";
-        }
-
         location / {
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme;
             resolver 127.0.0.11; # docker dns
             proxy_pass $app_target;
+        }
+    }
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name minio.localhost;
+        set $minio_target "http://minio:9000";
+        location / {
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            resolver 127.0.0.11; # docker dns
+            proxy_pass $minio_target;
         }
     }
     server {
@@ -35,8 +42,8 @@ http {
         }
     }
     map $http_upgrade $connection_upgrade {
-    default upgrade;
-    ''      close;
+        default upgrade;
+        ''      close;
     }
     server {
         listen 80 default_server;
