--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,12 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+
+
+# Static Storage
+AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=
+AWS_DEFAULT_REGION_NAME=
+AWS_S3_STORAGE_BUCKET=
+AWS_S3_ENDPOINT_URL=
+AWS_S3_CLIENT_ENDPOINT_URL=
