--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "django-htmx>=1.23.0",
     "django-ninja>=1.4.1",
     "django-simple-history>=3.8.0",
+    "django-storages[s3]>=1.14.2",
+    "boto3>=1.34.69",
     "gunicorn>=23.0.0",
     "psycopg2-binary>=2.9.10",
     "pyjwt>=2.10.1",
