--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -12,7 +12,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme;
-            resolver 127.0.0.11; # docker dns
+            resolver 10.0.0.2; # AWS VPC DNS
             proxy_pass $app_target;
         }
     }
