--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ env:
   ECR_REPOSITORY: opensailor-app
   ECS_SERVICE: arn:aws:ecs:us-east-2:227647310737:service/opensailor-cluster/opensailor-service
   ECS_CLUSTER: arn:aws:ecs:us-east-2:227647310737:cluster/opensailor-cluster
-  ECS_TASK_DEFINITION: arn:aws:ecs:us-east-2:227647310737:task-definition/opensailor-task:1
+  ECS_TASK_DEFINITION: arn:aws:ecs:us-east-2:227647310737:task-definition/opensailor-task
   CONTAINER_NAME: app
 
 jobs:
@@ -43,7 +43,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG . --build-arg ENVIRONMENT=production -f dockerfiles/app.Dockerfile
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
