--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,9 @@ jobs:
         with:
           tofu-version: 'latest'
 
+      - name: Make export script executable
+        run: chmod +x opentofu/export-ecs-task-def.sh # github doesn't copy the executable bit?
+
       - name: Export ECS task definition from OpenTofu
         run: opentofu/export-ecs-task-def.sh
 
