--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,12 +15,12 @@ dependencies = [
     "django-storages[s3]>=1.14.2",
     "boto3>=1.34.69",
     "gunicorn>=23.0.0",
-    "psycopg2-binary>=2.9.10",
     "pyjwt>=2.10.1",
     "python3-openid>=3.2.0",
     "requests>=2.32.3",
     "python-magic>=0.4.27",
     "pillow>=11.2.1",
+    "psycopg2>=2.9.10",
 ]
 
 [tool.setuptools]
