--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -4,16 +4,19 @@ http {
     server {
         listen 80;
         listen [::]:80;
-        server_name app.opensailor.org;
+        server_name opensailor.org;
         set $app_target "http://app:8000";
 
-        # Production environment - let Django handle S3 signed URLs
         location / {
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme;
-            resolver 10.0.0.2; # AWS VPC DNS
+            resolver 169.254.169.253; # ECS dns
             proxy_pass $app_target;
+            proxy_set_header Upgrade $http_upgrade;
+		    proxy_set_header Connection $connection_upgrade;
+		    proxy_http_version 1.1;
+		    proxy_read_timeout 86400;
         }
     }
 
