--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -11,13 +11,17 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header X-Forwarded-Proto $scheme;
-            resolver 169.254.169.253; # ECS dns
+            resolver 10.0.0.2; # ECS dns
             proxy_pass $app_target;
             proxy_set_header Upgrade $http_upgrade;
 		    proxy_set_header Connection $connection_upgrade;
 		    proxy_http_version 1.1;
 		    proxy_read_timeout 86400;
         }
+    }
+    location /healthz {
+        return 200 'ok';
+        add_header Content-Type text/plain;
     }
 
     map $http_upgrade $connection_upgrade {
