--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -5,7 +5,9 @@ http {
         listen 80;
         listen [::]:80;
         server_name opensailor.org;
-        set $app_target "http://app:8000";
+        # remember - ECS Fargate cannot resolve container names,
+        # it needs to be the localhost ip address
+        set $app_target "http://127.0.0.1:8000";
 
         location / {
             proxy_set_header Host $host;
@@ -18,11 +20,13 @@ http {
 		    proxy_http_version 1.1;
 		    proxy_read_timeout 86400;
         }
+
+        location /healthz {
+            return 200 'ok';
+            add_header Content-Type text/plain;
+        }
     }
-    location /healthz {
-        return 200 'ok';
-        add_header Content-Type text/plain;
-    }
+
 
     map $http_upgrade $connection_upgrade {
         default upgrade;
@@ -30,6 +34,12 @@ http {
     }
 
     server {
+
+        location /healthz {
+            return 200 'ok';
+            add_header Content-Type text/plain;
+        }
+
         listen 80 default_server;
         server_name not_found;
         return 404;
