--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -34,14 +34,16 @@ http {
     }
 
     server {
+        listen 80 default_server;
+        server_name not_found;
 
         location /healthz {
             return 200 'ok';
             add_header Content-Type text/plain;
         }
 
-        listen 80 default_server;
-        server_name not_found;
-        return 404;
+        location / {
+            return 404;
+        }
     }
 }
