--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "python-magic>=0.4.27",
     "pillow>=11.2.1",
     "psycopg2>=2.9.10",
+    "psycopg2-binary>=2.9.10",
 ]
 
 [tool.setuptools]
