--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       - AWS_S3_CLIENT_ENDPOINT_URL=http://minio.localhost
       - AWS_DEFAULT_REGION_NAME=${AWS_DEFAULT_REGION_NAME}
       - AWS_S3_STORAGE_BUCKET=${AWS_S3_STORAGE_BUCKET}
+
+      - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
     depends_on:
       database_startup:
         condition: service_completed_successfully
