--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pillow>=11.2.1",
     "psycopg2>=2.9.10",
     "psycopg2-binary>=2.9.10",
+    "markdown>=3.8",
 ]
 
 [tool.setuptools]
