nginx allow larger uploads

--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -8,6 +8,7 @@ http {
         # remember - ECS Fargate cannot resolve container names,
         # it needs to be the localhost ip address
         set $app_target "http://127.0.0.1:8000";
+        client_max_body_size 20M;
 
         location / {
             proxy_set_header Host $host;
