--- a/nginx/development.conf
+++ b/nginx/development.conf
@@ -13,6 +13,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             resolver 127.0.0.11; # docker dns
             proxy_pass $app_target;
+            client_max_body_size 100M;
         }
     }
     server {
