--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,11 @@ permissions:
   contents: read
 
 env:
-  AWS_REGION: us-east-2
+  AWS_REGION: ${{ vars.AWS_REGION }}
   ECR_REPOSITORY: opensailor-app
-  ECS_SERVICE: arn:aws:ecs:us-east-2:227647310737:service/opensailor-cluster/opensailor-service
-  ECS_CLUSTER: arn:aws:ecs:us-east-2:227647310737:cluster/opensailor-cluster
-  ECS_TASK_DEFINITION: arn:aws:ecs:us-east-2:227647310737:task-definition/opensailor-task
+  ECS_SERVICE: arn:aws:ecs:${{ vars.AWS_REGION }}:${{ vars.AWS_ACCOUNT_ID }}:service/opensailor-cluster/opensailor-service
+  ECS_CLUSTER: arn:aws:ecs:${{ vars.AWS_REGION }}:${{ vars.AWS_ACCOUNT_ID }}:cluster/opensailor-cluster
+  ECS_TASK_DEFINITION: arn:aws:ecs:${{ vars.AWS_REGION }}:${{ vars.AWS_ACCOUNT_ID }}:task-definition/opensailor-task
   CONTAINER_NAME: app
 
 jobs:
@@ -44,8 +44,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::227647310737:role/opensailor-github-actions-deploy
-          aws-region: us-east-2
+          role-to-assume: arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/opensailor-github-actions-deploy
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Set up OpenTofu
         uses: opentofu/setup-opentofu@v1
