--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - AWS_S3_STORAGE_BUCKET=${AWS_S3_STORAGE_BUCKET}
 
       - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
+      - EMAIL_HOST=${EMAIL_HOST}
     depends_on:
       database_startup:
         condition: service_completed_successfully
