--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,6 @@ services:
     ports: []
 
   database_startup:
-    image: db_startup
     build:
       context: .
       dockerfile: dockerfiles/db_startup.Dockerfile
@@ -100,7 +99,7 @@ services:
   database:
     image: postgres:16
     volumes:
-      - .data/postgres:/var/lib/postgresql/data
+      - ./.data/postgres:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
