--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Set up OpenTofu
         uses: opentofu/setup-opentofu@v1
         with:
-          tofu-version: '1.9.1'
+          tofu_version: '1.9.1'
 
       - name: Export ECS task definition from OpenTofu
         run: |
