--- a/.github/workflows/drift.yml
+++ b/.github/workflows/drift.yml
@@ -42,9 +42,7 @@ jobs:
         id: plan
         run: |
           set -e
-          # Try to unlock any stale locks first
-          tofu force-unlock -force 12c78af5-721a-9ebb-d98a-bc131ac72359 || true
-          tofu plan -detailed-exitcode -no-color -lock=false -input=false
+          tofu plan -detailed-exitcode -no-color
         working-directory: opentofu
         continue-on-error: true
 
