Fix uv installation in GitHub Actions
Use official uv installer script instead of pip install, and source cargo env to access uv binary.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -114,14 +114,18 @@ jobs:
         with:
           python-version: '3.12'
 
+      - name: Install uv package manager
+        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+
       - name: Install Python dependencies
         run: |
-          pip install uv
+          source $HOME/.cargo/env
           cd app
           uv sync
 
       - name: Collect and upload all static files to S3
         run: |
+          source $HOME/.cargo/env
           cd app
           uv run python manage.py collectstatic --noinput
         env:
