Add minimal Django settings for collectstatic-only operation
- Create collectstatic_settings.py with minimal config (no database deps)
- Use fresh Python container with git clone to avoid environment issues
- Only install required apps: staticfiles, django_htmx, storages
- Use in-memory SQLite as dummy database (not accessed during collectstatic)

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -111,15 +111,25 @@ jobs:
 
       - name: Collect and upload all static files to S3
         run: |
-          # Override environment variables for production S3 upload
-          export ENVIRONMENT=production
-          export DJANGO_SECRET_KEY="${{ secrets.DJANGO_SECRET_KEY }}"
-          export AWS_S3_STORAGE_BUCKET=static-opensailor-org
-          export AWS_DEFAULT_REGION_NAME="${{ vars.AWS_REGION }}"
-          export AWS_S3_ENDPOINT_URL="https://s3.${{ vars.AWS_REGION }}.amazonaws.com"
-          export AWS_S3_CLIENT_ENDPOINT_URL="https://static.opensailor.org"
-          # Run collectstatic using docker-compose
-          docker compose run --rm app uv run python app/manage.py collectstatic --noinput
+          docker run --rm \
+            -v $(pwd)/static:/src/static \
+            -e DJANGO_SECRET_KEY="${{ secrets.DJANGO_SECRET_KEY }}" \
+            -e AWS_ACCESS_KEY_ID \
+            -e AWS_SECRET_ACCESS_KEY \
+            -e AWS_SESSION_TOKEN \
+            -e AWS_S3_STORAGE_BUCKET=static-opensailor-org \
+            -e AWS_DEFAULT_REGION_NAME="${{ vars.AWS_REGION }}" \
+            -e AWS_S3_ENDPOINT_URL="https://s3.${{ vars.AWS_REGION }}.amazonaws.com" \
+            -e AWS_S3_CLIENT_ENDPOINT_URL="https://static.opensailor.org" \
+            python:3.12-slim \
+            bash -c "
+              pip install uv && 
+              cd /tmp && 
+              git clone https://github.com/pirate-baby/opensailor.git . && 
+              cd app && 
+              uv sync && 
+              uv run python manage.py collectstatic --noinput --settings=collectstatic_settings
+            "
 
       - name: Build and push image to Amazon ECR
         id: build-image
