--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -112,7 +112,8 @@ jobs:
       - name: Collect and upload all static files to S3
         run: |
           docker run --rm \
-            -v $(pwd)/static:/src/static \
+            -v $(pwd):/workspace \
+            -w /workspace \
             -e DJANGO_SECRET_KEY="${{ secrets.DJANGO_SECRET_KEY }}" \
             -e AWS_ACCESS_KEY_ID \
             -e AWS_SECRET_ACCESS_KEY \
@@ -123,9 +124,7 @@ jobs:
             -e AWS_S3_CLIENT_ENDPOINT_URL="https://static.opensailor.org" \
             python:3.12-slim \
             bash -c "
-              pip install uv && 
-              cd /tmp && 
-              git clone https://github.com/pirate-baby/opensailor.git . && 
+              pip --root-user-action=ignore install uv && 
               cd app && 
               uv sync && 
               uv run python manage.py collectstatic --noinput --settings=collectstatic_settings
