--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -125,10 +125,9 @@ jobs:
             python:3.12-slim \
             bash -c "
               pip install --upgrade pip > /dev/null 2>&1 && 
-              pip install uv > /dev/null 2>&1 && 
+              pip install django==5.2.1 django-htmx==1.23.0 django-storages==1.14.2 boto3==1.34.69 > /dev/null 2>&1 && 
               cd app && 
-              uv sync --project pyproject_collectstatic.toml && 
-              uv run --project pyproject_collectstatic.toml python manage.py collectstatic --noinput --settings=collectstatic_settings
+              python manage.py collectstatic --noinput --settings=collectstatic_settings
             "
 
       - name: Build and push image to Amazon ECR
