--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,6 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "3.4.0"
   }
 }
