--- a/nginx/development.conf
+++ b/nginx/development.conf
@@ -42,6 +42,18 @@ http {
             proxy_pass $langfuse_target;
         }
     }
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name static.opensailor.org;
+        location / {
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-For $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            resolver 127.0.0.11; # docker dns
+            proxy_pass http://minio:9000$uri;
+        }
+    }
     map $http_upgrade $connection_upgrade {
         default upgrade;
         ''      close;
