--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,54 +81,54 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build CSS assets
-        run: |
-          cd app
-          curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64
-          chmod +x tailwindcss-linux-x64
-          ./tailwindcss-linux-x64 -i input.css -o ../static/output.css
+      #- name: Build CSS assets
+      #  run: |
+      #    cd app
+      #    curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64
+      #    chmod +x tailwindcss-linux-x64
+      #    ./tailwindcss-linux-x64 -i input.css -o ../static/output.css
 
-      - name: Build frontend assets  
-        run: |
-          mkdir -p static/libraries
-          cd client_side_js
-          npm install vite @milkdown/crepe
-          npx vite build
-          cp -r dist/* ../static/libraries/
+      #- name: Build frontend assets
+      #  run: |
+      #    mkdir -p static/libraries
+      #    cd client_side_js
+      #    npm install vite @milkdown/crepe
+      #    npx vite build
+      #    cp -r dist/* ../static/libraries/
 
-      - name: Verify static files exist
-        run: |
-          if [ ! -f "static/output.css" ]; then
-            echo "Error: static/output.css not found after build"
-            exit 1
-          fi
-          if [ ! -f "static/libraries/main.js" ]; then
-            echo "Error: static/libraries/main.js not found after build"
-            exit 1
-          fi
-          echo "Static files verified:"
-          ls -la static/output.css static/libraries/main.js
+      #- name: Verify static files exist
+      #  run: |
+      #    if [ ! -f "static/output.css" ]; then
+      #      echo "Error: static/output.css not found after build"
+      #      exit 1
+      #    fi
+      #    if [ ! -f "static/libraries/main.js" ]; then
+      #      echo "Error: static/libraries/main.js not found after build"
+      #      exit 1
+      #    fi
+      #    echo "Static files verified:"
+      #    ls -la static/output.css static/libraries/main.js
 
-      - name: Collect and upload all static files to S3
-        run: |
-          docker run --rm \
-            -v $(pwd):/workspace \
-            -w /workspace \
-            -e DJANGO_SECRET_KEY="${{ secrets.DJANGO_SECRET_KEY }}" \
-            -e AWS_ACCESS_KEY_ID \
-            -e AWS_SECRET_ACCESS_KEY \
-            -e AWS_SESSION_TOKEN \
-            -e AWS_S3_STORAGE_BUCKET=static-opensailor-org \
-            -e AWS_DEFAULT_REGION_NAME="${{ vars.AWS_REGION }}" \
-            -e AWS_S3_ENDPOINT_URL="https://s3.${{ vars.AWS_REGION }}.amazonaws.com" \
-            -e AWS_S3_CLIENT_ENDPOINT_URL="https://static.opensailor.org" \
-            python:3.12-slim \
-            bash -c "
-              pip install --upgrade pip > /dev/null 2>&1 && 
-              pip install django==5.2.1 django-htmx==1.23.0 django-storages==1.14.2 boto3==1.34.69 > /dev/null 2>&1 && 
-              cd app && 
-              python manage.py collectstatic --noinput --settings=collectstatic_settings
-            "
+      #- name: Collect and upload all static files to S3
+      #  run: |
+      #    docker run --rm \
+      #      -v $(pwd):/workspace \
+      #      -w /workspace \
+      #      -e DJANGO_SECRET_KEY="${{ secrets.DJANGO_SECRET_KEY }}" \
+      #      -e AWS_ACCESS_KEY_ID \
+      #      -e AWS_SECRET_ACCESS_KEY \
+      #      -e AWS_SESSION_TOKEN \
+      #      -e AWS_S3_STORAGE_BUCKET=static-opensailor-org \
+      #      -e AWS_DEFAULT_REGION_NAME="${{ vars.AWS_REGION }}" \
+            #-e AWS_S3_ENDPOINT_URL="https://s3.${{ vars.AWS_REGION }}.amazonaws.com" \
+            #-e AWS_S3_CLIENT_ENDPOINT_URL="https://static.opensailor.org" \
+            #python:3.12-slim \
+            #bash -c "
+              #pip install --upgrade pip > /dev/null 2>&1 &&
+              #pip install django==5.2.1 django-htmx==1.23.0 django-storages==1.14.2 boto3==1.34.69 > /dev/null 2>&1 &&
+              #cd app &&
+              #python manage.py collectstatic --noinput --settings=collectstatic_settings
+            #"
 
       - name: Build and push image to Amazon ECR
         id: build-image
