--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,7 +84,7 @@ jobs:
       - name: Build CSS assets
         run: |
           cd app
-          curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64
+          curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/download/v3.4.0/tailwindcss-linux-x64
           chmod +x tailwindcss-linux-x64
           ./tailwindcss-linux-x64 -i input.css -o ../static/output.css
 
