--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -94,8 +94,16 @@ jobs:
           cd client_side_js
           npm install vite @milkdown/crepe
           npx vite build
+          echo "=== Checking dist directory contents ==="
+          ls -la dist/
+          if [ -f "dist/manifest.json" ]; then
+            echo "=== Manifest content ==="
+            cat dist/manifest.json
+            cp dist/manifest.json ../static/libraries/.vite/manifest.json
+          else
+            echo "No manifest.json found in dist/"
+          fi
           cp -r dist/* ../static/libraries/
-          cp dist/manifest.json ../static/libraries/.vite/manifest.json
 
       - name: Verify static files exist
         run: |
