--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -140,7 +140,7 @@ jobs:
               pip install --upgrade pip > /dev/null 2>&1 &&
               pip install django==5.2.1 django-htmx==1.23.0 django-storages==1.14.2 boto3==1.34.69 > /dev/null 2>&1 &&
               cd app &&
-              python manage.py collectstatic --noinput --settings=collectstatic_settings
+              python manage.py collectstatic --noinput --no-default-ignore --settings=collectstatic_settings
             "
 
       - name: Build and push image to Amazon ECR
